# vehicle-safety-mcp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  REGISTRY_SUBMISSIONS.md  RELEASE_NOTES.md  pyproject.toml  server.json
.github/workflows/: ci.yml  contract-drift.yml
src/vehicle_safety_mcp/: __init__.py  nhtsa.py  server.py
tests/: test_live.py
tests/live/: test_live_nhtsa.py
tests/unit/: test_nhtsa.py  test_resilience.py  test_server.py
