[project]
name = "vehicle-safety-mcp"
version = "0.1.0"
description = "MCP server exposing NHTSA vehicle safety data to Claude: VIN decoding, recalls, crash-test ratings, and complaints"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Basit Khan", email = "ab6031203@gmail.com" }]
keywords = ["mcp", "nhtsa", "automotive", "vehicle-safety", "claude", "llm"]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27.0",
]

[project.scripts]
vehicle-safety-mcp = "vehicle_safety_mcp.server:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vehicle_safety_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
